# NSTEA

./: .dockerignore  .env.example  .gitignore  Dockerfile  FHIR_DATASET_ANALYSIS.md  NS-TEA_IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/guidelines/: acs_management.txt  anticoagulation_management.txt  diabetes_management.txt  hypertension_management.txt  pregnancy_drug_safety.txt  uti_treatment.txt
data/rules/: contraindications.yml  drug_interactions.yml
data/test_cases/: safety_edge_cases.json
frontend/streamlit_app/: app.py
frontend/web/: app.js  index.html
notebooks/: 02_fhir_dataset_exploration.ipynb
scripts/: index_guidelines.py  run_evaluation.py  run_evaluation_phase1.py  run_evaluation_v2.py  seed_knowledge_graph.py
src/nstea/: __init__.py  config.py  main.py
src/nstea/agents/: confidence_agent.py  orchestrator.py  reasoning_agent.py  reasoning_agent_v1.py  safety_agent.py  temporal_agent.py
src/nstea/api/: __init__.py  middleware.py
src/nstea/core/: __init__.py  logging.py
src/nstea/data_layer/: fhir_loader.py
src/nstea/models/: analysis.py  feedback.py  patient.py
src/nstea/retrieval/: __init__.py  context_builder.py  embedder.py  vector_store.py
src/nstea/safety/: __init__.py  constraint_engine.py  knowledge_graph.py  rule_engine.py
src/nstea/services/: feedback_service.py
src/nstea/temporal/: __init__.py  batch_updater.py  embedding_cache.py  (+2 more)
tests/: test_agents.py  test_calculators.py  test_constraint_engine.py  test_retrieval.py  test_rule_engine.py  test_temporal.py
(+10 files in other folders)
